--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>React Parcel Micro App</title>
+    <title>Baseball Score Testing</title>
   </head>
   <body>
     <div id="root"></div>
